kubernetes/backend/admin_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-backend
  template:
    metadata:
      labels:
        app: admin-backend
    spec:
      containers:
        - name: admin-backend
          image: anys34/ioj:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: ioj-storage
              mountPath: /vol
      volumes:
        - name: ioj-storage
          persistentVolumeClaim:
            claimName: nfs-pvc
