kubernetes/backend/admin_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-backend
  labels:
    app: admin-backend
spec:
  type: LoadBalancer
  selector:
    app: admin-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
